# Tasker

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: adaptive_routing.yml  model_policy.yml  orchestrator.yml  projects.yml  token_budgets.yml  workflows.yml
docs/: architecture.md  hermes_openclaw_skill.md
engineering_orchestrator/: README.md  pyproject.toml
engineering_orchestrator/config/: orchestrator.yml
engineering_orchestrator/tests/: test_artifact_store.py  test_task_lifecycle.py  test_task_store.py
langgraph-task-router/: .env.example  README.md  pyproject.toml
langgraph-task-router/config/: projects.yml  workflows.yml
langgraph-task-router/tests/: test_router.py
scripts/: check_public_repo_hygiene.py  create_source_archive.py  export_project.py  export_source.py
src/engineering_assistant/: __init__.py  api.py  main.py  settings.py  task_router.py
src/engineering_orchestrator/: __init__.py  api.py  cli.py  graph.py  main.py  models.py  settings.py  ui.py
src/engineering_orchestrator/corrections/: __init__.py  linked_task_detector.py
src/engineering_orchestrator/executors/: __init__.py  base.py  codex_executor.py  mock_executor.py  opencode_executor.py
src/engineering_orchestrator/harness/: __init__.py  context_builder.py  prompt_builder.py  skills.py  working_memory.py
src/engineering_orchestrator/llm/: __init__.py  gateway.py  model_policy.py  model_selector.py  prompt_budgeter.py  prompt_bundle.py  token_usage.py  types.py
src/engineering_orchestrator/loop/: __init__.py  engine.py  evaluator.py  observer.py  repair_planner.py  stop_conditions.py
src/engineering_orchestrator/nodes/: __init__.py  close_task.py  collect_context.py  commit_changes.py  correction.py  create_plan.py  create_task.py  (+7 more)
src/task_router/: __init__.py  app.py  codex_cli.py  config_loader.py  graph.py  heuristics.py  llm.py  models.py
tests/: test_unified_app.py
tests/orchestrator/: test_artifact_store.py  test_codex_executor.py  test_execution_event_payload.py  test_file_policy.py  test_git_service.py  test_linked_task_detector.py  test_model_policy_prompt_jobs.py  test_planning_service.py  test_source_archive.py  test_task_lifecycle.py  test_task_store.py  test_token_usage.py  test_validation_service.py
tests/task_router/: test_adaptive_routing.py  test_router.py
web/: .env.example  index.html  package-lock.json  package.json
web/src/: App.tsx  i18n.ts  styles.css  uiMode.ts
(+79 files in other folders)
