[project]
name = "langgraph-task-router"
version = "0.1.0"
description = "Configurable LangGraph task router: free text -> project -> complexity -> workflow"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.60",
  "langchain-openai>=0.2.0",
  "langchain-core>=0.3.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
task-router = "task_router.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
